fix: migrate endpoint and endpointgroups from v2 to v4